--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font Awsam -->
+
+    <script src="https://kit.fontawesome.com/349b67ac4a.js" crossorigin="anonymous"></script>
+
+
     <title>E-School For Your Business</title>
     <link rel="stylesheet" href="responcive.css">
     <link rel="stylesheet" href="style.css">
@@ -69,6 +74,61 @@
 
             </div>
         </div>
+
+
+
+        <section>
+            <div class="courses-section">
+                <h1>Online Courses</h1>
+                <div class="courses">
+                    <div class="courses-content">
+                        <img src="img/Morder psyc.png" alt="">
+                        <h3>Modern Psychology</h3>
+                        <p>Designation</p>
+                        <button>Buy Course</button>
+                        <div class="dk">
+                            <h6> <i class="fa-solid fa-calendar-days"></i>  Start 20  April, 2021</h6>
+                            <h5><i class="fa-solid fa-user-group"></i>  60 seats</h5>
+
+                        </div>
+
+                    </div>
+
+
+
+                    <div class="courses-content">
+                        <img src="img/Morder pychons.png" alt="">
+                        <h3>Modern Psychology</h3>
+                        <p>Designation</p>
+                        <button>Buy Course</button>
+                        <div class="dk">
+                            <h6> <i class="fa-solid fa-calendar-days"></i>  Start 20  April, 2021</h6>
+                            <h5><i class="fa-solid fa-user-group"></i>  60 seats</h5>
+
+                        </div>
+
+                    </div>
+
+
+
+
+                    <div class="courses-content">
+                        <img src="img/Morder pyschology.png" alt="">
+                        <h3>Modern Psychology</h3>
+                        <p>Designation</p>
+                        <button>Buy Course</button>
+                        <div class="dk">
+                            <h6> <i class="fa-solid fa-calendar-days"></i>  Start 20  April, 2021</h6>
+                            <h5><i class="fa-solid fa-user-group"></i>  60 seats</h5>
+
+                        </div>
+
+                    </div>
+                    
+
+                </div>
+            </div>
+        </section>
 
 
     </main>
